# mage

./: CMakeLists.txt  README.md
include/mage/platform/: com_ptr.hpp  win32_window.hpp  win32_window_class.hpp
include/mage/platform/win32/: vk_win32_surface.hpp  win32_window.hpp  win32_window_class.hpp
include/mage/renderer/: render_system.hpp
include/mage/renderer/vulkan/: vk_device.hpp  vk_instance.hpp  vk_physical_device.hpp  vk_surface.hpp
src/: main.cpp
src/platform/: win32_window.cpp
src/platform/win32/: vk_win32_surface.cpp  win32_window.cpp
src/renderer/vulkan/: vk_device.cpp  vk_instance.cpp  vk_physical_device.cpp
